crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_empty.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_empty.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..7,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    names: [],
                    is_lazy: false,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | import
  |       ^ Syntax Error: Expected one or more symbol names after import
