crates/ruff_python_parser/tests/snapshots/invalid_syntax@import_stmt_star_import.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/import_stmt_star_import.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: [
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 0..6,
                    names: [],
                    is_lazy: false,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 7..8,
                    value: Starred(
                        ExprStarred {
                            node_index: NodeIndex(None),
                            range: 7..8,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 8..8,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Import(
                StmtImport {
                    node_index: NodeIndex(None),
                    range: 9..18,
                    names: [
                        Alias {
                            range: 16..17,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("x"),
                                range: 16..17,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    is_lazy: false,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 19..23,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 19..23,
                            elts: [
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 19..20,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 20..20,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 22..23,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                            runtime_elts: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | import *
  |        ^ Syntax Error: Expected one or more names after 'import'
2 | import x, *, y
  |


  |
1 | import *
  |         ^ Syntax Error: invalid syntax
2 | import x, *, y
  |


  |
1 | import *
2 | import x, *, y
  |         ^ Syntax Error: trailing comma not allowed without surrounding parentheses


  |
1 | import *
2 | import x, *, y
  |           ^ Syntax Error: invalid syntax


  |
1 | import *
2 | import x, *, y
  |            ^ Syntax Error: invalid syntax
